# MP-VRDU-Analysis

./: .gitignore  HANDOFF.md  README.md  SINGLE_GPU_8B_FEASIBILITY.md  UwU.md  __init__.py  config.py  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements-light.txt  requirements-local-rtx5070.txt  requirements.txt  schema.py
annotations/: auto_scan.csv  doc_labels.csv  model_weights.csv
cli/: __init__.py  build.py  build_tables.py  experiments.py  gates.py  generate.py  judge.py  run_experiment.py  run_probe.py  run_smoke.py
configs/: baseline_noretrieval.yaml  local_subset_oracle_mock.yaml  local_subset_tiny_vlm.yaml  oracle.yaml  smoke.yaml  smoke_bm25.yaml
covariates/: __init__.py  classifier.py  retriever.py
data/: __init__.py  annotations.py  binning.py  loader.py  render.py
docs/: AGENT_GUIDE.md  ANNOTATION_GUIDE.md  ARCHITECTURE.md  CODEBASE_GUIDE.md  DATA.md  DECISIONS.md  EVALUATION.md  G1_Representation.md  G2_Retrieval.md  H100_RUNBOOK.md  HANDOFF.md  KAYA.md  MINING_NOTES.md  MODELS.md  PROJECT_SPEC.md  REPO_STRUCTURE.md  RQ_BRIEF.md  RUNBOOK.md  SINGLE_GPU_8B_FEASIBILITY.md  TOOLS.md  USER_GUIDE.md  WIP_g4_g3_merge.md  WIP_yaml_expander.md  all_tables.md  all_tables_summarised.md  context.md  dataset_profile.md  dataset_stats.csv  implementation_changes.md  implementation_plan.md  implementation_plan_old.md  judge_build_mine.md  phase4_autobuild.md  phase4_plan.md  pivot_v4.md  pivot_v4_implementation.md  project_plan.md  questions.md  runs.txt
experiments/: G1_sufficiency.py  G2_family.py  G3_dataset.py  G5_retrieval.py  T1_headline.py  (+27 more)
(+431 files in other folders)
